[gd_scene load_steps=3 format=3 uid="uid://bkwcncqk4nj5k"]

[ext_resource type="Script" path="res://v1/Matches/Fighters/FighterDisplay.gd" id="1_3bm43"]
[ext_resource type="PackedScene" uid="uid://hoavyem0add4" path="res://v1/Matches/Cards/FighterImageDisplay.tscn" id="2_7nvlx"]

[node name="FighterDisplay" type="PanelContainer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = -1099.0
offset_bottom = -581.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_3bm43")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 2
theme_override_constants/margin_left = 2
theme_override_constants/margin_top = 2
theme_override_constants/margin_right = 2
theme_override_constants/margin_bottom = 2

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2

[node name="Name" type="Label" parent="MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Name"
horizontal_alignment = 1

[node name="Image" parent="MarginContainer/VBoxContainer" instance=ExtResource("2_7nvlx")]
unique_name_in_owner = true
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
alignment = 1

[node name="CurHealth" type="Label" parent="MarginContainer/VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "12"

[node name="Label2" type="Label" parent="MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
text = "/"

[node name="MaxHealth" type="Label" parent="MarginContainer/VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "14"
